scrollbar animation timeline fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,9 @@
 .hero-shell{
 opacity: 0;
 }
-
+.sc{
+  opacity: 0;
+}
 body {
   background-color: #f40c3f;
   overflow-x: hidden;
